--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "daisyui": "^5.0.43",
     "firebase": "^11.9.0",
     "lottie-react": "^2.4.1",
+    "motion": "^12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
     "tailwindcss": "^4.1.8"
   },
